# PyGridFight

./: .devenv.flake.nix  .gitignore  .pre-commit-config.yaml  Makefile  README.md  devenv.nix  main.py  pyproject.toml  sonar-project.properties
.roo/rules/: 01_general_standards.md  02_test_driven_development.md  03_architectural_principles.md  04_testing_strategy.md  05_code_quality.md  06_version_control.md  07_dependency_management.md
.woodpecker/: build.yaml
docs/api/: .gitkeep
docs/architecture/: .gitkeep
documents/: PRD_Mode_Plan.md  PyGridFight_Architecture.md  PyGridFight_Implementation_Plan.md  PyGridFight_PRD.md  PyGridFight_Roo_Rules.md  PyGridFight_Task_Breakdown.md  PyGridFight_Technical_Guidelines.md
src/pygridfight/: __init__.py  main.py
src/pygridfight/api/: __init__.py  connection_manager.py  converters.py  middleware.py  rest.py  schemas.py  websocket.py  websockets.py
src/pygridfight/core/: __init__.py  config.py  enums.py  exceptions.py  logging.py  models.py
src/pygridfight/domain/: __init__.py  enums.py
src/pygridfight/game_lifecycle/: exceptions.py  manager.py
src/pygridfight/gameplay/: actions.py  avatar.py  exceptions.py  grid.py  models.py  player.py  resources.py  session.py
src/pygridfight/infrastructure/: __init__.py  events.py  game_state.py
src/pygridfight/scoring/: services.py
src/pygridfight/services/: __init__.py  combat_service.py  game_engine.py  game_manager.py  (+2 more)
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_main.py  test_schemas.py  test_websockets.py
tests/core/: __init__.py  test_enums.py  test_models.py
tests/game_lifecycle/: __init__.py  test_manager.py
tests/gameplay/: test_actions.py  test_avatar.py  test_grid.py  test_models.py  test_player.py  test_resources.py  test_session.py
tests/integration/: __init__.py  test_rest_api.py
tests/scoring/: __init__.py  test_services.py
tests/unit/: __init__.py  test_config_logging.py  test_fastapi_app.py  test_game.py  test_game_state_manager.py  test_grid.py  test_health.py  test_player_avatar.py
(+12 files in other folders)
