[project]
name = "pygridfight"
version = "0.1.0"
description = "A turn-based strategy game with WebSocket API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.9.0",
    "fastapi>=0.115.12",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "structlog>=25.3.0",
    "uvicorn[standard]>=0.34.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
    "trio>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pygridfight"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint.isort]
known-first-party = ["pygridfight"]
