[project]
name = "pygridfight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ghislain PIOT", email = "ghislain.piot@grenoble-inp.org" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "uvicorn[standard]>=0.34.2",
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
